--- a/index.html
+++ b/index.html
@@ -1,18 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bookmarker App</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
 
+    <div class="container">
+        <div class="header clearfix">
+            <nav>
+                
+            </nav>
+            <h3 class="text-muted">Bookmarker</h3>
+        </div>
+
+        <div class="jumbotron">
+            <h2>Bookmark Your Favorite Webpage</h2>
+            <form id="myForm" action="#">
+                <div class="form-group">
+                    <label for="">Site Name</label>
+                    <input type="text" class="form-control" id="site-name" placeholder="Website Name">
+                </div>
+                <div class="form-group">
+                    <label for="">Site URL</label>
+                    <input type="text" class="form-control" id="site-url" placeholder="Website URL">
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+
+        <div class="row marketing">
+            <div class="col-lg-6">
+                <h4>Subheading</h4>
+                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+
+                <h4>Subheading</h4>
+                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+                <h4>Subheading</h4>
+                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+            </div>
+
+            <div class="col-lg-6">
+                <h4>Subheading</h4>
+                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+
+                <h4>Subheading</h4>
+                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+                <h4>Subheading</h4>
+                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+            </div>
+        </div>
+
+        <footer class="footer">
+            <p>&copy; 2016 Company, Inc.</p>
+        </footer>
+
+    </div>
+    <!-- /container -->
 
 
-
-    
-<script src="js/app.js"></script>
+   
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 </body>
+
 </html>
