--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="header clearfix">
             <nav>
-                
+
             </nav>
             <h3 class="text-muted">Bookmarker</h3>
         </div>
@@ -35,7 +35,7 @@
         </div>
 
         <div class="row marketing">
-            <div class="col-lg-6">
+            <div class="col-lg-12">
                 <h4>Subheading</h4>
                 <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 
@@ -46,28 +46,17 @@
                 <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
             </div>
 
-            <div class="col-lg-6">
-                <h4>Subheading</h4>
-                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+            <footer class="footer">
+                <p>&copy; 2018 Bookmarker, Inc.</p>
+            </footer>
 
-                <h4>Subheading</h4>
-                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-                <h4>Subheading</h4>
-                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-            </div>
         </div>
-
-        <footer class="footer">
-            <p>&copy; 2016 Company, Inc.</p>
-        </footer>
-
-    </div>
-    <!-- /container -->
+        <!-- /container -->
 
 
-   
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+        <!-- Add libraries -->
+        <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+        <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
