--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bookmarker App</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -23,7 +24,7 @@
             <h2>Bookmark Your Favorite Webpage</h2>
             <form id="myForm" action="#">
                 <div class="form-group">
-                    <label for="">Site Name</label>
+                    <label for="#">Site Name</label>
                     <input type="text" class="form-control" id="site-name" placeholder="Website Name">
                 </div>
                 <div class="form-group">
@@ -36,14 +37,7 @@
 
         <div class="row marketing">
             <div class="col-lg-12">
-                <h4>Subheading</h4>
-                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-                <h4>Subheading</h4>
-                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-                <h4>Subheading</h4>
-                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+                <div id="bookmarks-result"></div>
             </div>
 
             <footer class="footer">
@@ -57,6 +51,7 @@
         <!-- Add libraries -->
         <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
         <script src="js/bootstrap.min.js"></script>
+        <script src="js/app.js"></script>
 </body>
 
 </html>
