--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <h2>Bookmark Your Favorite Webpage</h2>
             <form id="myForm" action="#">
                 <div class="form-group">
-                    <label for="#">Site Name</label>
+                    <label for="site name">Site Name</label>
                     <input type="text" class="form-control" id="site-name" placeholder="Website Name">
                 </div>
                 <div class="form-group">
-                    <label for="">Site URL</label>
+                    <label for="site url">Site URL</label>
                     <input type="text" class="form-control" id="site-url" placeholder="Website URL">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
