Add button type

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <input type="text" class="form-control" id="site-url" placeholder="Website URL">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="submit" id="btn-clear" class="btn btn-danger">Clear History</button>
+                <button type="reset" id="btn-clear" class="btn btn-danger">Clear History</button>
             </form>
         </div>
 
